<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ngodesain.mondokin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ngodesain.mondokin.ui.viewmaps.ViewMapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_view_maps" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ngodesain.mondokin.ui.terdekat.SearchFragment"
        android:label="@string/title_search_terdekat"
        tools:layout="@layout/fragment_search" />
</navigation>